# kuvademspltn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo_template.html  wrapper.html
common/: demo.cpp  demo.hpp  print.cpp  residgenerator.cpp  residgenerator.hpp  rng.cpp  window.cpp  window.hpp
common/renderer/: buffer.hpp  color.hpp  dynamicbox.cpp  font.cpp  renderer.hpp  shader.cpp  sprite.cpp  sprite.hpp  spritemodel.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp
demo/sprite/: sprite.cmake
demo/text/: main.cpp  text.cmake
res/common/shader/: color.fragmentshader  color.vertexshader  texture.fragmentshader  texture.vertexshader
res/cubes/shader/: color.fragmentshader  color.vertexshader
res/disintegrate/shader/: disint.fragmentshader  disint.vertexshader
res/fire/shader/: fire.fragmentshader  fire.vertexshader  fireMult.fragmentshader
res/roiske/: blood.sprite
res/sprite/arrow/: sprite.txt
script/: generate_res_id.py  log.py  package.py
src/common/: demo.cpp  demo.hpp  loadsprite.cpp  loadsprite.hpp  print.cpp  print.hpp  project.hpp.in  resid.hpp  residgenerator.hpp  rng.hpp  time.hpp  window.cpp  window.hpp  xwindow.cpp  xwindow.hpp
src/common/renderer/: buffer.cpp  buffer.hpp  color.cpp  color.hpp  dynamicbox.cpp  dynamicbox.hpp  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  relative.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  spritegroup.cpp  spritegroup.hpp  spritemodel.cpp  spritemodel.hpp  texture.cpp  texture.hpp
src/common/strkilxprs/: CMakeLists.txt  LICENSE  README.md  testobject.txt
src/common/strkilxprs/src/: error.cpp  error.hpp  list.cpp  list.hpp  map.cpp  map.hpp  object.cpp  object.hpp  parse.cpp  parse.hpp  plain.cpp  plain.hpp  string.cpp  string.hpp  strkilxprs.cpp  strkilxprs.hpp
src/common/strkilxprs/src/test/: main.cpp
src/common/window/: vroot.h  window.cpp  xwindow.cpp  xwindow.hpp
src/demo/cubes/: cubes.cmake  cubesdemo.cpp  cubesdemo.hpp  main.cpp
src/demo/disintegrate/: disintdemo.cpp  disintdemo.hpp  disintegrate.cmake  main.cpp  rainbowcycle.hpp
src/demo/fire/: fire.cmake  main.cpp  rainbowcycle.cpp  rainbowcycle.hpp
src/demo/roiske/: main.cpp  roiske.cmake  roiskedemo.cpp  roiskedemo.hpp
src/demo/signaali/: main.cpp  signaali.cmake  signaalidemo.cpp  signaalidemo.hpp
src/demo/sprite/: main.cpp  sprite.cmake  spritedemo.cpp  spritedemo.hpp
src/demo/text/: main.cpp  text.cmake
